<resources>
    <string name="app_name">MobileAss</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="registered">Already Have Account</string>
    <string name="noRegister">New? Create a new account</string>
    <string name="profile">Profile</string>
    <string name="username_dash">Username</string>
    <string name="name">Name</string>
    <string name="change">Change password</string>
    <string name="changepassword">change</string>
    <string name="occupation">Occupation</string>
    <string name="family_member">Family member</string>
    <string name="salary">Monthly Salary</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Account Deletion</string>
    <string name="save">Save</string>
    <string name="emptyField">Cannot leave empty\n</string>
    <string name="account_setting">Account Settings</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reauthenticate_account">Reauthenication before delete account</string>
    <string name="password">Password</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="expenses">Expense</string>
    <string name="monthly_target">Target Saving</string>
    <string name="newExpense">Add New Expense</string>
    <string name="title">Title</string>
    <string name="totalexpense">Total Expense</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="update">Update</string>
    <string name="delete">Delete\n</string>
    <string name="edit">Edit Expense\n</string>
    <string name="totalsave">Total Save</string>
    <string-array name="category">
        <item>Utility Fee</item>
        <item>Grocery</item>
        <item>Rent</item>
        <item>Entertainment</item>
        <item>Loan</item>
        <item>Other</item>
    </string-array>
    <string name="type_your_task">Type your task .....</string>

    <string-array name="Category">
        <item>Personal</item>
        <item>Work</item>
        <item>Study</item>
    </string-array>
    <string-array name="Status">
        <item>Pending</item>
        <item>Prior</item>
    </string-array>
</resources>