<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="my.edu.tarc.mobileass.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="my.edu.tarc.mobileass.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_accountFragment"
            app:destination="@id/accountFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="my.edu.tarc.mobileass.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="my.edu.tarc.mobileass.ui.settings.ProfileFragment"
        android:label="User Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="my.edu.tarc.mobileass.ui.settings.AccountFragment"
        android:label="Account Settings"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_accountFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>