<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:elevation="3dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_person_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/profile"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout style="@style/profile_edit">

            <TextView

                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username_dash"
                android:textSize="18sp"
                tools:text="@string/username_dash" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="Name"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:background="#CAC6C6"
            tools:layout_marginStart="10dp" />

        <LinearLayout style="@style/profile_edit">

            <TextView

                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/occupation"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/occupation"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:background="#CAC6C6"
            tools:layout_marginStart="10dp" />

        <LinearLayout style="@style/profile_edit">

            <TextView

                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_member"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="@string/family_member"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:background="#CAC6C6"
            tools:layout_marginStart="10dp" />

        <LinearLayout style="@style/profile_edit">

            <TextView

                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:text="@string/salary"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:background="#CAC6C6"
            tools:layout_marginStart="10dp" />

        <Button
            android:id="@+id/buttonSave"
            style="@style/profile_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>


</FrameLayout>