<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                style="@style/recycle_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView10"
                style="@style/recycle_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalexpense"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView11"
                style="@style/recycle_expense"
                android:layout_marginStart="92dp"
                android:layout_marginTop="36dp"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/texttotalExpense"
                style="@style/recycle_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                tools:layout_editor_absoluteX="164dp" />

            <TextView
                android:id="@+id/textTitle"
                style="@style/recycle_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                tools:layout_editor_absoluteX="164dp" />

            <TextView
                android:id="@+id/textDate"
                style="@style/recycle_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                tools:layout_editor_absoluteX="164dp" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="55dp"
                android:layout_height="47dp"
                app:icon="@drawable/baseline_delete_24"
                app:layout_constraintBottom_toBottomOf="@+id/texttotalExpense"
                tools:layout_editor_absoluteX="340dp" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="58dp"
                android:layout_height="46dp"
                app:icon="@drawable/baseline_update_24"
                app:layout_constraintTop_toTopOf="@+id/textDate"
                tools:layout_editor_absoluteX="337dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>